[package]
name = "rsomics-align-score"
version = "0.1.0"
description = "Pairwise sequence alignment — Needleman-Wunsch (global) or Smith-Waterman (local)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
[[bin]]
name = "rsomics-align-score"
path = "src/main.rs"
[lib]
name = "rsomics_align_score"
path = "src/lib.rs"
[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-align-core = { path = "../../../foundation/rsomics-align-core", version = "0.1" }
clap.workspace = true
needletail = { version = "0.7", default-features = false }
[lints]
workspace = true
