[package]
name = "rsomics-align-score"
version = "0.1.1"
description = "Pairwise sequence alignment — Needleman-Wunsch (global) or Smith-Waterman (local)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
[[bin]]
name = "rsomics-align-score"
path = "src/main.rs"
[lib]
name = "rsomics_align_score"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-align-core = { version = "0.2" }
clap = { version = "4", features = ["derive"] }
needletail = { version = "0.7", default-features = false }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
[[bench]]
name = "bench"
harness = false
